--- a/package.json
+++ b/package.json
@@ -17,6 +17,25 @@
   },
   "homepage": "https://github.com/realyze/watchpocket",
   "devDependencies": {
-    "bower-installer": "~0.6.2"
+    "bower-installer": "~0.6.2",
+    "grunt": "~0.4.2",
+    "grunt-cli": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-exec": "*",
+    "grunt-usemin": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-bumpup": "*",
+    "grunt-crx": "~0.3.3",
+    "browserify": "^3.38.1",
+    "grunt-browserify": "^2.0.3",
+    "cssify": "^0.5.0",
+    "uglifyify": "^2.1.1",
+    "grunt-contrib-clean": "^0.5.0",
+    "watchify": "^0.6.4",
+    "grunt-contrib-watch": "^0.6.1"
+  },
+  "dependencies": {
+    "minilog": "^2.0.4"
   }
 }
