--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocket",
-  "version": "1.10.17",
+  "version": "1.10.19",
   "description": "Kitt Pocket extension.",
   "private": "true",
   "scripts": {
@@ -33,7 +33,8 @@
     "uglifyify": "^2.1.1",
     "grunt-contrib-clean": "^0.5.0",
     "watchify": "^0.6.4",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-s3": "^0.2.0-alpha.3"
   },
   "dependencies": {
     "minilog": "^2.0.4"
