--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,11 @@
 {
   "manifest_version": 2,
-
   "name": "pocket",
   "description": "This extension allows you to connect to your Pocket account, bookmark and view a list of all your bookmarks.",
-  "version": "1.11",
-  "icons": { "128": "img/appIcon.png" },
+  "version": "1.10.24",
+  "icons": {
+    "128": "img/appIcon.png"
+  },
   "background": {
     "scripts": [
       "js/main.js"
