--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,10 @@
   "manifest_version": 2,
   "name": "pocket",
   "description": "The Pocket extension for Kitt makes it easy and convenient to save and retrieve webpages from the popular Pocket service.",
-  "version": "1.11.5",
-  "icons": {
+  "version": "1.11.6",
+  "icons": { 
+    "32": "img/appIcon.png",
+    "43": "img/appIconBW.png",
     "128": "img/appIcon.png"
   },
   "background": {
