Got rid of Bower and implemented Article View

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "Pocket",
   "description": "The Pocket extension for Kitt makes it easy and convenient to save and retrieve webpages from the popular Pocket service.",
   "version": "1.13.0",
-  "icons": { 
+  "icons": {
     "32": "img/appIcon.png",
     "43": "img/appIconBW.png",
     "128": "img/appIcon.png"
@@ -13,6 +13,17 @@
       "js/main.js"
     ]
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "js/content.js"
+      ]
+    }
+  ],
   "permissions": [
     "tabs",
     "contextMenus",
