add ionic framework gitignore exception

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ bower_components
 node_modules
 /dist
 /build
-!node_modules/ionic-framework
+!node_modules/ionic-framework/*
+!node_modules/ionic-framework/
