--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angular-animate": "^1.3.16",
     "angular-moment": "^0.10.1",
     "angular-truncate-2": "^0.1.2",
+    "babelify": "^6.3.0",
     "ionic-framework": "~1.0.0-beta.13",
     "jquery": "^2.1.4",
     "minilog": "^2.0.4",
